--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+    <meta name="google-site-verification" content="5DuOj3wPkaj9HuS7-9gwkLBb1t-rkv1OGxbuPh2enGo" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خدمات الحاسوب والدعم البرمجي | أبوبكر حسان</title>
@@ -839,3 +840,4 @@
     </script>
 </body>
 </html>
+
